--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -223,18 +223,28 @@ body {
 .main {
     display: grid;
     grid-area: main;
+    position: relative;
 }
 
 .main > * {
     grid-area: 1/-1;
 }
 
-.main .bg {
+.main::before {
+    content: "";
+    position: absolute;
     width: 100%;
     height: 100%;
+    background-image: url("../images/Summer.webp");
+    background-size: cover;
+    background-attachment: fixed;
     opacity: 0.2;
-    -o-object-fit: cover;
-    object-fit: cover;
+}
+
+@media (max-width: 1025px) {
+    .main::before {
+        background-position: 0 50%;
+    }
 }
 
 .main__content {
@@ -247,14 +257,14 @@ body {
     align-content: baseline;
 }
 
-.main__content > div {
+.main__content > div:not(.projects) {
     display: grid;
     gap: 1.5rem;
 }
 
 @media (max-width: 769px) {
-    .main__content > div {
-        justify-items: center;
+    .main__content h3 {
+        justify-self: center;
     }
 }
 
@@ -585,37 +595,90 @@ body {
     }
 }
 
+.projects {
+    display: grid;
+    gap: 4rem;
+}
+
+@media (max-width: 769px) {
+    .projects {
+        gap: 0;
+    }
+}
+
 .project__item {
     display: -ms-flexbox;
     display: flex;
     position: relative;
+    width: 80%;
+    height: clamp(5rem, 7vw, 10rem);
     padding: 1rem;
-    -ms-flex-align: center;
-    align-items: center;
+    -ms-flex-align: end;
+    align-items: end;
+    box-shadow: 0px 15px 10px -15px #f2541c;
+}
+
+@media (max-width: 769px) {
+    .project__item {
+        height: auto;
+        width: 100%;
+        padding: clamp(1rem, 2vw, 2rem);
+        -ms-flex-direction: column;
+        flex-direction: column;
+        -ms-flex-align: center;
+        align-items: center;
+    }
 }
 
 .project__item img {
+    width: 100%;
+    height: 100%;
+    aspect-ratio: 16/9;
     border-radius: 1rem;
     box-shadow: 0 0 1.5rem #000;
 }
 
 .project__item_name {
     width: 50%;
-    font-size: clamp(2rem, 2vw, 5rem);
+    font-size: clamp(2rem, 2vw, 3rem);
     font-weight: 600;
     color: #f2541c;
+    white-space: nowrap;
 }
 
-.project__item_name:hover + .project__item_img {
-    position: absolute;
-    right: 0;
-    bottom: 0;
-    width: 70%;
+@media (min-width: 770px) {
+    .project__item_name:hover + .project__item_img {
+        width: 50%;
+    }
 }
 
-.project__item_img {
-    width: 30%;
-    transition: width 0.5s linear;
+@media (max-width: 769px) {
+    .project__item_name {
+        width: 100%;
+        padding: 1rem;
+        text-align: center;
+    }
+}
+
+@media (min-width: 770px) {
+    .project__item_img {
+        position: absolute;
+        bottom: 20%;
+        right: 0;
+        width: 30%;
+        transition: width 0.5s linear;
+    }
+
+    .project__item_img:hover {
+        width: 50%;
+    }
+}
+
+@media (max-width: 769px) {
+    .project__item_img {
+        width: 100%;
+        max-width: 60rem;
+    }
 }
 
 .about__exp span {
@@ -625,6 +688,12 @@ body {
 
 .exp__ed {
     grid-template-columns: repeat(auto-fit, minmax(25rem, 1fr));
+}
+
+@media (max-width: 769px) {
+    .exp__ed {
+        grid-template-columns: 1fr;
+    }
 }
 
 .exp__ed span {
@@ -637,13 +706,11 @@ body {
     align-self: baseline;
 }
 
-@media (max-width: 549px) {
-    .exp__ed > * {
-        justify-items: center;
-    }
-}
-
 .exp__ed .speciality {
     color: #000;
     font-weight: 700;
+}
+
+.experience:not(:first-child) {
+    row-gap: 1rem;
 }
